--- a/UIs/textEditor/src/css/index.css
+++ b/UIs/textEditor/src/css/index.css
@@ -5,9 +5,12 @@ ul {
 ul .paper {
     height: 200px;
     width: 450px;
-    border: solid 1px gray;
 }
 
 textarea.form-control{
     height: 150px;
+}
+
+#header {
+    margin-top: 30px;
 }
